Optimize gas limits per PoCo function (#117)